added additional challenges for the user to participate in.